# minima

./: .gitignore  Cargo.toml  README.md
crates/minima-3d/: Cargo.toml
crates/minima-3d/src/: depth.rs  lib.rs  model.rs  pipeline.rs  render.rs
crates/minima-camera/: Cargo.toml
crates/minima-camera/src/: lib.rs
crates/minima-gltf/: Cargo.toml
crates/minima-gltf/src/: lib.rs  loader.rs
crates/minima-runtime/: Cargo.toml
crates/minima-runtime/src/: lib.rs
crates/minima-scene/: Cargo.toml
crates/minima-scene/src/: lib.rs
src/: app.rs  main.rs  project.rs
