[package]
name = "minima-gltf"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
anyhow = { version = "1.0.100" }
gltf = { version = "1.4.1", features = ["import", "names"] }
image = { version = "0.25.8", default-features = false, features = [
    "png",
    "jpeg",
] }
minima-3d = { path = "../minima-3d" }
